Added the script management.